--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="settings">Settings</string>
     <string name="dialog_network_title">Device not connected!</string>
     <string name="dialog_network_message">Please check your network connection and try again.</string>
+    <string name="edit_hint_search">search…</string>
 </resources>
